--- a/src/main/webapp/WEB-INF/views/SignInUp.html
+++ b/src/main/webapp/WEB-INF/views/SignInUp.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="./../css/bootstrap.min.css">
+	<link rel="stylesheet" href="./../css/font-awesome.min.css">
+	<link rel="stylesheet" href="./../css/main.css">
 	<title>Document</title>
 </head>
 <body>
