--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -91,3 +91,18 @@ body {
     padding-right: 0px;
     border-right: 0px;
 }
+
+.neighborhood-guides {
+    background-color: #efefef;
+    border-bottom:1px solid #dbdbdb;
+}
+
+.neighborhood-guides h2 {
+    color: #393c3d;
+    font-size: 24px;
+}
+
+.neighborhood-guides p {
+    font-size: 15px;
+    margin-bottom:13px;
+}
