--- a/src/main/webapp/resources/css/settings.css
+++ b/src/main/webapp/resources/css/settings.css
@@ -29,3 +29,22 @@
   font-size: 18px;
   border-right: 1px solid grey;
 }
+.challenges ul {
+  list-style-type: none;
+  font-size: 18px;
+  border-bottom: 1px solid grey;
+}
+.challenge {
+  border: 1px solid grey;
+  margin: 2%;
+}
+.challenge.picture {
+  text-align:center;
+}
+.challenge img{
+  max-width: 98%;
+  max-height: 98%;
+  size: auto;
+  margin: 2%;
+}
+
