--- a/src/main/webapp/resources/css/settings.css
+++ b/src/main/webapp/resources/css/settings.css
@@ -15,7 +15,7 @@
 
 .heading {
   position: relative;
-  margin-left: 25%;
+  margin-left: 12%;
 }
 
 .menu ul {
@@ -30,15 +30,29 @@
   border-right: 1px solid grey;
 }
 
+.menu2 ul {
+  font-size: 28px;
+  border-bottom: 1px solid grey;
+}
 .challenge {
   border: 1px solid grey;
-  margin: 2%;
+  margin: 0%;
+}
+.challenge-img {
+  float: left; width: 25%;
+  /* border: 1px solid grey; */
+  padding: 1%;
 }
 .challenge img{
-  max-width: 98%;
-  max-height: 98%;
+  max-width: 100%;
+  /* max-height: 100%; */
+  border: 1px solid grey;
   size: auto;
-  margin: 2%;
+}
+.challenge-info {
+  float: right; width: 75%;
+  /* border: 1px solid grey; */
+  padding: 1%;
 }
 .challenge p{
 	font-size: 20;
