--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,5 +1,6 @@
 body {
 	background-image: url('./../../resources/img/background.jpg');
+	background-attachment: fixed;
 }
 
 ul {
@@ -8,11 +9,33 @@ ul {
 
 .menu {
 	background-color: #7FC7FF;
-	border-radius: 10px;	
+	border-radius: 10px;
 }
 
 .challenge-progress {
 	background-color: #7FC7FF;
 	border-radius: 15px;
 	border: 2px solid #4E4D51;
+	margin: 10px;
+	min-height: 200px;
+}
+
+.challenge-img img {
+	width: 200px;
+	height: 200px;
+	margin: 10px 10px 10px 0px;
+	border-radius: 3px;
+}
+
+.challenge-head {
+	margin-bottom: 50px;
+}
+
+.challenge-info {
+	margin: 10px 10px 10px 5px;
+}
+
+.progress {
+	clear: both;
+	margin-bottom: 70px;
 }
