--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,12 +1,3 @@
-body {
-	background-image: url('./../../resources/img/background.jpg');
-	background-attachment: fixed;
-}
-
-ul {
-	list-style-type: none;
-}
-
 .menu {
 	background-color: #7FC7FF;
 	border-radius: 10px;
@@ -38,4 +29,17 @@ ul {
 .progress {
 	clear: both;
 	margin-bottom: 70px;
+}
+
+.challenge-add {
+	background-color: #7FC7FF;
+	border-radius: 15px;
+	border: 2px solid #4E4D51;
+	margin: 10px;
+	min-height: 200px;
+}
+
+.challenge-add h1 {
+	margin-top: 70px;
+	margin-left: 250px;
 }
