--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -26,12 +26,12 @@
   margin: 10px;
 }
 
-.main .nav a {
+.nav a {
   color: #464451;
   font-size: 28px;
 }
 
-.main .nav li {
+.nav li {
   display: inline;
   margin: 10px;
 }
